test/syntax/fail/causality/2.sync
let node f x = z where
  rec y = z + 2
  and z = y + 3
